Airflow/logs/dag_id=postgres_operator_dag_v1/run_id=manual__2022-12-11T15:07:13.108156+00:00/task_id=create_postgres_table/attempt=1.log
[2022-12-11T15:07:15.370+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag_v1.create_postgres_table manual__2022-12-11T15:07:13.108156+00:00 [queued]>
[2022-12-11T15:07:15.381+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag_v1.create_postgres_table manual__2022-12-11T15:07:13.108156+00:00 [queued]>
[2022-12-11T15:07:15.381+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2022-12-11T15:07:15.381+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 1
[2022-12-11T15:07:15.381+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2022-12-11T15:07:15.425+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2022-12-11 15:07:13.108156+00:00
[2022-12-11T15:07:15.430+0000] {standard_task_runner.py:55} INFO - Started process 2781 to run task
[2022-12-11T15:07:15.433+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag_v1', 'create_postgres_table', 'manual__2022-12-11T15:07:13.108156+00:00', '--job-id', '46', '--raw', '--subdir', 'DAGS_FOLDER/postgres_operator_dag.py', '--cfg-path', '/tmp/tmpmtvmrbad']
[2022-12-11T15:07:15.433+0000] {standard_task_runner.py:83} INFO - Job 46: Subtask create_postgres_table
[2022-12-11T15:07:15.529+0000] {task_command.py:389} INFO - Running <TaskInstance: postgres_operator_dag_v1.create_postgres_table manual__2022-12-11T15:07:13.108156+00:00 [running]> on host 4f590d7fc3b1
[2022-12-11T15:07:16.143+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=postgres_operator_dag_v1
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2022-12-11T15:07:13.108156+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-11T15:07:13.108156+00:00
[2022-12-11T15:07:16.143+0000] {sql.py:253} INFO - Executing: 
            create table if not exists dag_demo_table (
                dt date
                dag_id character varying
                primary (dt, dag_id)
            )
        
[2022-12-11T15:07:16.150+0000] {base.py:73} INFO - Using connection ID 'financial_database' for task execution.
[2022-12-11T15:07:16.347+0000] {base.py:73} INFO - Using connection ID 'financial_database' for task execution.
[2022-12-11T15:07:16.356+0000] {sql.py:364} INFO - Running statement: 
            create table if not exists dag_demo_table (
                dt date
                dag_id character varying
                primary (dt, dag_id)
            )
        , parameters: None
[2022-12-11T15:07:16.359+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "dag_id"
LINE 4:                 dag_id character varying
                        ^

[2022-12-11T15:07:16.365+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=postgres_operator_dag_v1, task_id=create_postgres_table, execution_date=20221211T150713, start_date=20221211T150715, end_date=20221211T150716
[2022-12-11T15:07:16.559+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 46 for task create_postgres_table (syntax error at or near "dag_id"
LINE 4:                 dag_id character varying
                        ^
; 2781)
[2022-12-11T15:07:16.567+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-11T15:07:16.592+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
